# slug-mcp

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deploy.sh
src/: cache.rs  config.rs  main.rs  progress.rs  server.rs  util.rs
src/academics/: mod.rs  scraper.rs
src/academics/fixtures/: class_results.html  directory_results.html
src/air_forecast/: mod.rs
src/air_forecast/fixtures/: air_quality.json
src/air_quality/: mod.rs
src/air_quality/fixtures/: airnow_current.json
src/astronomy/: mod.rs
src/astronomy/fixtures/: open_meteo_forecast.json  sunrise_sunset.json
src/auth/: browser.rs  cas.rs  mod.rs  session.rs  token.rs
src/auth/fixtures/: idp_consent.html
src/beach_water/: mod.rs
src/beach_water/fixtures/: ckan_beach_water.json
src/biodiversity/: ebird.rs  ebird_taxonomy.rs  inaturalist.rs  mod.rs
src/biodiversity/fixtures/: ebird_hotspots.json  ebird_recent_obs.json  inat_observations.json
src/buoy/: mod.rs
src/buoy/fixtures/: 46042.txt
src/classrooms/: buildings.json  locations.rs  mod.rs  scraper.rs
src/classrooms/fixtures/: classroom_list.html
src/climbing/: mod.rs
src/climbing/fixtures/: openbeta_empty.json  openbeta_errors.json  openbeta_live.json  openbeta_mixed.json
src/degrees/: breadth.rs  mod.rs  programs.rs  progress.rs  scraper.rs
src/dining/: mod.rs  scraper.rs
src/dining/fixtures/: funds_overview_partial.html  label.html  locations_hours.html  shortmenu.html
src/earthquakes/: mod.rs
src/earthquakes/fixtures/: query.json
src/events/: eventbrite.rs  mod.rs  tribe.rs
src/events/fixtures/: eventbrite_destination.json  eventbrite_discover_snippet.html  tribe_events.json
src/fire/: mod.rs
src/fire/fixtures/: firms_viirs.csv
src/instagram/: apify.rs  mod.rs
src/marine/: mod.rs  open_meteo.rs  spots.rs
src/marine/fixtures/: forecast_current.json  marine_steamer_lane.json
src/nps/: mod.rs  scraper.rs
src/ocean/: charm.rs  erddap_client.rs  fusion.rs  hfr.rs  m1.rs  mod.rs  sst.rs  types.rs  upwelling.rs  wharf.rs
src/ocean/fixtures/: charm_grid.json  cuti_head.csv  erddap_m1_surface.json  erddap_table_wharf.json  hfr_grid_small.json  sst_grid_small.json
src/outdoors/: mod.rs
src/outdoors/fixtures/: overpass_mixed.json  overpass_remark_error.json
src/recreation/: mod.rs  scraper.rs
src/recreation/fixtures/: group_exercise_unicode.html  occupancy.html  schedule_empty.html  schedule_populated.html  schedule_xhr.json
src/slugloop/: api.rs  mod.rs  stops.rs
src/space_weather/: mod.rs
src/space_weather/fixtures/: kp.json  scales.json  solar_wind.json
src/summer/: mod.rs
src/summer/fixtures/: academic_calendar.html
src/tides/: mod.rs
src/tides/fixtures/: error.json  predictions.json
src/traffic/: caltrans.rs  chp.rs  mod.rs
src/traffic/fixtures/: caltrans_d5_sample.json  chp_mycc_sample.xml
src/transit/: bustime.rs  gtfs.rs  gtfs_rt.rs  mod.rs  stops.rs
src/transit/fixtures/: gtfsrt_alerts.pb  gtfsrt_trips.pb  gtfsrt_vehicles.pb
src/usgs_water/: mod.rs
src/usgs_water/fixtures/: iv.json
src/util/: fuzzy.rs
src/wave_buoy/: mod.rs
src/wave_buoy/fixtures/: 46236.spec
src/weather/: mod.rs  nws.rs
src/weather/fixtures/: alerts.json  forecast.json  points.json
