[package]
name = "slug-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for UCSC campus services"

[[bin]]
name = "slug-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.2", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
reqwest = { version = "0.12", features = ["cookies", "json"] }
moka = { version = "0.12", features = ["future"] }
scraper = "0.22"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6"
aes-gcm = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
hostname = { version = "0.4", optional = true }
urlencoding = "2"
chrono = "0.4"
chromiumoxide = { version = "0.9.1", optional = true }
futures-util = "0.3.32"
base64 = { version = "0.22", optional = true }

[features]
default = ["auth"]
auth = ["dep:chromiumoxide", "dep:aes-gcm", "dep:sha2", "dep:hostname", "dep:base64"]

[dev-dependencies]
tempfile = "3"
