[package]
name = "slug-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for UCSC campus services"

[[bin]]
name = "slug-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.2", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
reqwest = { version = "0.12", features = ["cookies", "json", "gzip"] }
moka = { version = "0.12", features = ["future"] }
scraper = "0.22"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6"
aes-gcm = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
hostname = { version = "0.4", optional = true }
urlencoding = "2"
chrono = "0.4"
chrono-tz = "0.10"
chromiumoxide = { version = "0.9.1", optional = true }
futures-util = "0.3.32"
base64 = "0.22"
quick-xml = { version = "0.39", features = ["serialize"] }
gtfs-realtime = "0.2"
prost = "0.14"
regex = "1"

[features]
default = ["auth"]
auth = ["dep:chromiumoxide", "dep:aes-gcm", "dep:sha2", "dep:hostname"]

[dev-dependencies]
tempfile = "3"

# Inherits from `release` but cranks up cross-crate optimization.
# Build with: cargo build --profile release-optimized --no-default-features
# Output:    target/release-optimized/slug-mcp
#
# Tradeoffs vs `release`:
#   - lto = "fat"          - ~10-20% perf, ~30% smaller binary; 3-5× slower builds
#   - codegen-units = 1    - extra few % on top of LTO; slower builds
#   - strip = "symbols"    - smaller binary; less useful panic backtraces
#   - panic = "unwind"     - kept (default) so tokio task panics don't kill the server
[profile.release-optimized]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false
overflow-checks = false
