[package]
name = "slug-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for UCSC campus services"

[[bin]]
name = "slug-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.7", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
# reqwest 0.13 switched `default-tls` to rustls+aws-lc-rs. Pin native-tls
# explicitly (default-features off) to keep the system-OpenSSL backend the
# server has always used against the UCSC/gov endpoints — and to avoid adding
# an aws-lc-rs C build dependency to the public (`--no-default-features`) VM
# deploy. `charset`/`http2`/`system-proxy` replicate the rest of 0.13's default.
reqwest = { version = "0.13", default-features = false, features = ["cookies", "json", "gzip", "query", "form", "native-tls", "charset", "http2", "system-proxy"] }
moka = { version = "0.12", features = ["future"] }
scraper = "0.27"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6"
aes-gcm = { version = "0.10", optional = true }
sha2 = "0.10"
hostname = { version = "0.4", optional = true }
urlencoding = "2"
chrono = "0.4"
chrono-tz = "0.10"
chromiumoxide = { version = "0.9.1", optional = true }
futures-util = "0.3.32"
base64 = "0.22"
quick-xml = { version = "0.40", features = ["serialize"] }
gtfs-realtime = "0.2"
prost = "0.14"
regex = "1"
# Transitive pin (via reqwest → cookie_store → cookie 0.18.1): time 0.3.48 adds
# a blanket impl that conflicts with cookie 0.18.1, breaking the build. Hold
# time at 0.3.47 until cookie/cookie_store ship a compatible release. Remove
# this line once `cargo update -p time` past 0.3.47 builds clean again.
time = "=0.3.47"

[features]
default = ["auth"]
auth = ["dep:chromiumoxide", "dep:aes-gcm", "dep:hostname"]

[dev-dependencies]
tempfile = "3"

# Inherits from `release` but cranks up cross-crate optimization.
# Build with: cargo build --profile release-optimized --no-default-features
# Output:    target/release-optimized/slug-mcp
#
# Tradeoffs vs `release`:
#   - lto = "fat"          - ~10-20% perf, ~30% smaller binary; 3-5× slower builds
#   - codegen-units = 1    - extra few % on top of LTO; slower builds
#   - strip = "symbols"    - smaller binary; less useful panic backtraces
#   - panic = "unwind"     - kept (default) so tokio task panics don't kill the server
[profile.release-optimized]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false
overflow-checks = false
